overflow problem in nav menu mobile fixed

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -206,12 +206,14 @@ $midHeight: $menuDesktopHeight/2;
 		width: 100%;
 		height: 100vh;
 		background-color: $bgColor;
+		overflow-y: scroll;
 
     	@media (min-width: $mobileBreakpoint) {
     		flex-direction: row;
     		height: $menuDesktopHeight;
 	    	justify-content: space-between;
 	    	align-items: center;
+	    	overflow-y: initial;
     	}
 
 		&__item {
